--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "react": "17.0.2",
     "react-animated-cursor": "^2.5.2",
+    "react-animations": "^1.0.0",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
