--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.11.9",
     "@react-three/fiber": "^7.0.29",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
