--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@react-three/fiber": "^7.0.29",
     "@testing-library/jest-dom": "^5.16.4",
