--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-native-shadow": "^1.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
