--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.21.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/icons": "^4.11.3",
@@ -20,9 +21,13 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-moving-text": "^0.0.7",
     "react-native-shadow": "^1.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.6.1",
+    "react-type-animation": "^2.1.2",
+    "react-use-gesture": "^9.1.3",
     "web-vitals": "^2.1.4",
     "webkit-npm": "^3.1.1"
   },
