--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-animated-cursor": "^2.5.2",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-moving-text": "^0.0.7",
@@ -28,6 +29,7 @@
     "react-spring": "^9.6.1",
     "react-type-animation": "^2.1.2",
     "react-use-gesture": "^9.1.3",
+    "three": "^0.149.0",
     "web-vitals": "^2.1.4",
     "webkit-npm": "^3.1.1"
   },
