--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "rc-slider": "^10.1.1",
     "react": "17.0.2",
     "react-animated-cursor": "^2.5.2",
     "react-animations": "^1.0.0",
@@ -26,6 +27,7 @@
     "react-native-shadow": "^1.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.4",
     "react-spring": "^9.6.1",
     "react-type-animation": "^2.1.2",
     "react-use-gesture": "^9.1.3",
