--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "fontsource-cascadia-code": "^4.0.0",
     "rc-slider": "^10.1.1",
     "react": "17.0.2",
     "react-animated-cursor": "^2.5.2",
