--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.7.1",
     "react-moving-text": "^0.0.7",
     "react-native-shadow": "^1.2.2",
     "react-router-dom": "^6.8.1",
