--- a/package.json
+++ b/package.json
@@ -3,46 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.21.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.11.9",
-    "@mui/material": "^5.11.9",
-    "@react-three/fiber": "^7.0.29",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.2",
-    "bootstrap": "^5.2.3",
-    "fontsource-cascadia-code": "^4.0.0",
-    "rc-slider": "^10.1.1",
     "react": "17.0.2",
-    "react-animated-cursor": "^2.5.2",
-    "react-animations": "^1.0.0",
-    "react-bootstrap": "^2.7.2",
-    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.7.1",
-    "react-moving-text": "^0.0.7",
-    "react-native-shadow": "^1.2.2",
-    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "react-slider": "^2.0.4",
-    "react-spring": "^9.6.1",
-    "react-type-animation": "^2.1.2",
-    "react-use-gesture": "^9.1.3",
-    "three": "^0.149.0",
-    "web-vitals": "^2.1.4",
-    "webkit-npm": "^3.1.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "install": "npm install"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
