--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "fontsource-cascadia-code": "^4.0.0",
+    "jquery": "^3.6.4",
     "react": "17.0.2",
     "react-animated-cursor": "^2.5.2",
     "react-bootstrap": "^2.7.2",
