--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-moving-text": "^0.0.7",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
