--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "express": "^4.18.2",
     "fontsource-cascadia-code": "^4.0.0",
     "jquery": "^3.6.4",
     "react": "17.0.2",
