--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-animated-cursor": "^2.5.2",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-moving-text": "^0.0.7",
